replace button and replace old date-picker with new one

--- a/src/app/components/forms/announcement-management-form/announcement-group-form/announcement-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-group-form/announcement-group-form.component.html
@@ -41,7 +41,7 @@
       <td>{{ rowData.AnnouncementId }}</td>
 
       <td>
-        <p-button
+        <app-button
           icon="pi pi-pencil"
           severity="info"
           variant="text"
@@ -51,7 +51,7 @@
       </td>
 
       <td>
-        <p-button
+        <app-button
           icon="pi pi-trash"
           severity="danger"
           variant="text"
