--- a/src/app/components/forms/user-charging-function-form/user-charging-function-form.component.html
+++ b/src/app/components/forms/user-charging-function-form/user-charging-function-form.component.html
@@ -32,8 +32,8 @@
   </div>
 </div>
 <div class="flex flex-row justify-center mt-8">
-  <p-button styleClass="w-[17rem]" label="دریافت اطلاعات" (onClick)="FetchData()">
-  </p-button>
+  <app-button styleClass="w-[17rem]" label="دریافت اطلاعات" (onClick)="FetchData()">
+  </app-button>
 </div>
 <p-table
   class="col-span-12 overflow-x-auto"
