--- a/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
+++ b/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
@@ -18,7 +18,7 @@
           validationField="mobile"
           label="شماره موبایل"
         />
-        <p-button
+        <app-button
           type="submit"
           icon="pi pi-search"
           styleClass="mt-1 w-8 h-8 rounded-full"
@@ -70,7 +70,7 @@
         </tr>
       </ng-template>
     </p-treetable>
-    <p-button
+    <app-button
       class="flex flex-col m-2 col-span-12"
       label="ثبت تغییرات"
       (onClick)="SaveChanges()"
