--- a/src/app/components/shared/dialog/new-password-dialog/new-password-dialog.component.html
+++ b/src/app/components/shared/dialog/new-password-dialog/new-password-dialog.component.html
@@ -1,25 +1,24 @@
 <div class="flex gap-4 flex-col">
   <div class="flex items-center justify-between">
     <span class="w-32"> شناسه کابری: </span>
-    <p-button
+    <app-button
       (click)="copyToClipboard(username)"
       size="small"
       styleClass="px-6 w-40"
       severity="info"
     >
       {{ username }}
-    </p-button>
+    </app-button>
   </div>
 
   <div class="flex items-center justify-between">
     <span class="w-32"> رمز عبور جدید </span>
-    <p-button
+    <app-button
       (click)="copyToClipboard(password)"
       size="small"
       styleClass="px-6 w-40"
-      severity="primary"
     >
       {{ password }}
-    </p-button>
+    </app-button>
   </div>
 </div>
