--- a/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
 <div class="h-full w-full pl-2" dir="ltr">
   <div
     dir="ltr"
-    class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg"
+    class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg dark:shadow-gray-700"
   >
     <div>
       <app-search-processes dir="rtl" />
@@ -34,6 +34,6 @@
       <app-logo />
     </div>
   </div>
-  `
+  
 </div>
 }
