--- a/src/app/components/shared/terminal-card/terminal-card.component.html
+++ b/src/app/components/shared/terminal-card/terminal-card.component.html
@@ -14,7 +14,7 @@
 
   <div class="grid md:justify-center">
     <a [href]="getLoginLink()">
-      <p-button
+      <app-button
         label="ورود به صفحه"
         styleClass="w-full text-md  md:w-45 h-12"
       />
