--- a/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
@@ -52,7 +52,7 @@
       <td>{{ rowData.AnnouncementSGId }}</td>
 
       <td>
-        <p-button
+        <app-button
           icon="pi pi-pencil"
           severity="info"
           variant="text"
@@ -62,7 +62,7 @@
       </td>
 
       <td>
-        <p-button
+        <app-button
           icon="pi pi-trash"
           severity="danger"
           variant="text"
@@ -136,7 +136,7 @@
     </div>
 
     <div class="flex col-span-12 justify-end">
-      <p-button
+      <app-button
         label="ثبت و ویرایش اطلاعات"
         [disabled]="announcementSubGroupForm.invalid || loading"
         (click)="registerOrEdit()"
