--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -20,12 +20,12 @@
   />
 
   <div class="flex flex-col gap-2 mb-8">
-    <p-button
+    <app-button
       [disabled]="forgetPasswordForm.invalid"
       type="submit"
       styleClass="px-8 h-2-5rem w-full"
     >
       تایید
-    </p-button>
+    </app-button>
   </div>
 </form>
