--- a/src/app/components/forms/issued-turn-list-form/issued-turn-list-form.component.html
+++ b/src/app/components/forms/issued-turn-list-form/issued-turn-list-form.component.html
@@ -25,7 +25,7 @@
           }
           <!-- Cancel button -->
           <div class="flex justify-center mt-4">
-            <p-button
+            <app-button
               icon="pi pi-times-circle"
               styleClass="px-6 py-2 text-sm font-semibold"
               severity="danger"
@@ -44,6 +44,6 @@
 <p-confirmDialog
   acceptLabel="تایید"
   rejectLabel="انصراف"
-  acceptButtonStyleClass="px-8 p-button-danger py-2 text-sm"
-  rejectButtonStyleClass="px-6 p-button-secondary py-2 text-sm"
+  acceptButtonStyleClass="px-8 app-button-danger py-2 text-sm"
+  rejectButtonStyleClass="px-6 app-button-secondary py-2 text-sm"
 />
