--- a/src/app/components/forms/register-turn-form/register-turn-form.component.html
+++ b/src/app/components/forms/register-turn-form/register-turn-form.component.html
@@ -16,11 +16,11 @@
     [disabled]="loading"
   />
 
-  <div class="w-full md:flex md:justify-end mt-6">
-    <p-button
+  <div class="col-span-12 md:flex md:justify-end mt-6">
+    <app-button
       label="درخواست صدور نوبت"
       styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
-      severity="primary"
+      severity="green"
       [disabled]="sequentialTurnId.invalid || loading"
       (click)="submitRealTimeTurn()"
     />
