--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -60,7 +60,7 @@
   />
 
   <div class="col-span-12 flex justify-end">
-    <p-button
+    <app-button
       label="جستجو"
       severity="info"
       size="small"
@@ -80,7 +80,7 @@
 >
   <ng-template #caption>
     <div class="flex justify-between items-center">
-      <p-button
+      <app-button
         label="جدید"
         size="small"
         styleClass="px-6 md:px-8 py-1"
@@ -100,7 +100,7 @@
   <ng-template #body let-rowData>
     <tr>
       <td>
-        <p-button
+        <app-button
           icon="pi pi-pencil"
           severity="info"
           variant="text"
@@ -109,7 +109,7 @@
         />
       </td>
       <td>
-        <p-button
+        <app-button
           icon="pi pi-trash"
           severity="danger"
           variant="text"
@@ -144,13 +144,13 @@
 
 <!-- 📦 Actions -->
 <div class="flex w-full justify-end gap-4 mt-6">
-  <p-button label="بارگزاری فایل اکسل" severity="warn" />
-  <p-button
+  <app-button label="بارگزاری فایل اکسل" severity="warn" />
+  <app-button
     [disabled]="tariffs.length === 0"
     label="غیرفعال کردن تعرفه"
     severity="danger"
   />
-  <p-button
+  <app-button
     [disabled]="tariffs.length === 0"
     label="افزایش تعرفه"
     severity="info"
@@ -270,7 +270,7 @@
 
     <!-- Submit -->
     <div class="col-span-12 flex justify-end mt-4">
-      <p-button
+      <app-button
         label="ثبت تغییرات"
         type="submit"
         [disabled]="tariffForm.invalid || loading"
