--- a/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
@@ -115,9 +115,8 @@
         </div>
 
         <div class="col-span-12 md:col-span-6">
-          <app-text-input
+          <app-date-picker-input
             class="flex-1"
-            type="date"
             label="تاریخ اتمام"
             placeholder="تاریخ اتمام"
             datePickerPosition="top"
@@ -125,7 +124,7 @@
             validationField="truckNativenessExpiredDate"
             [readOnly]="true"
             [addonWidth]="addonWidth"
-          ></app-text-input>
+          ></app-date-picker-input>
         </div>
       </div>
     </div>
@@ -133,11 +132,11 @@
     <div
       class="col-span-12 md:flex md:flex-row-reverse md:flex-wrap gap-4 items-center"
     >
-      <p-button
+      <app-button
         (click)="changeNativeness()"
         label="تغییر وضعیت بومی گری"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-48 lg:w-60"
-      ></p-button>
+      ></app-button>
     </div>
   </form>
 </div>
