--- a/src/app/components/forms/turns-management-form/emergency-time-turns-form copy/emergency-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/emergency-time-turns-form copy/emergency-turns-form.component.html
@@ -13,10 +13,9 @@
     class="col-span-12 py-0"
   />
   <div class="col-span-12 md:flex md:justify-end">
-    <p-button
+    <app-button
       label="درخواست صدور نوبت"
       styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
-      severity="primary"
       [disabled]="emergencyTurnForm.invalid || loading"
       (click)="submitEmergencyTurn()"
     />
