--- a/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
@@ -2,10 +2,9 @@
   <app-turns-truck-info-base-form [truckId]="truckId" [sequentialTurnId]="sequentialTurnId" />
 
   <div class="w-full md:flex md:justify-end my-5">
-    <p-button
+    <app-button
       label="درخواست صدور نوبت"
       styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
-      severity="primary"
       [disabled]="sequentialTurnId.invalid"
       (click)="submitRealTimeTurn()"
     />
