--- a/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
@@ -20,10 +20,9 @@
     />
   </div>
   <div class="col-span-12 md:flex md:justify-end">
-    <p-button
+    <app-button
       label="درخواست صدور نوبت"
       styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
-      severity="primary"
       [disabled]="resuscitateTurnForm.invalid || loading"
       (click)="submitResuscitateTurnForm()"
     />
