--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -31,21 +31,20 @@
 <div
   class="col-span-12 mt-8 md:mb-12 md:flex md:flex-row-reverse md:flex-wrap gap-4 items-center"
   >
-  <p-button
+  <app-button
     (click)="activateUserSms()"
     [disabled]="loading() || isUserSmsActivated || !userProfile()"
     severity="warn"
     label="فعال سازی پیامک"
     styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
-  ></p-button>
+  ></app-button>
 
-  <p-button
+  <app-button
     (click)="confirmResetPassword()"
     [disabled]="loading() || !userProfile()"
-    severity="primary"
     label="ایجاد رمز عبور جدید"
     styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
-  ></p-button>
+  ></app-button>
 </div>
 
 <!-- Confirm dialog -->
@@ -53,6 +52,6 @@
   position="top"
   acceptLabel="تایید"
   rejectLabel="انصراف"
-  acceptButtonStyleClass="px-8 p-button-info py-2 text-sm"
-  rejectButtonStyleClass="px-6 p-button-secondary py-2 text-sm"
+  acceptButtonStyleClass="px-8 app-button-info py-2 text-sm"
+  rejectButtonStyleClass="px-6 app-button-secondary py-2 text-sm"
   />
