--- a/src/app/components/shared/inputs/search-input/search-input.component.html
+++ b/src/app/components/shared/inputs/search-input/search-input.component.html
@@ -11,20 +11,21 @@
     [addonWidth]="addonWidth"
     (input)="onInputChanged($event)"
     (keydown.enter)="onSearchButtonClick()"
-  ></app-text-input>
+
+ ></app-text-input>
 
   <div class="flex items-center">
     @if (!autoTriggerSearch) {
-      <p-button
+      <app-button
         (click)="onSearchButtonClick()"
         [label]="searchButtonLabel"
         [disabled]="disableSearchButton"
         size="small"
-        styleClass="px-6 py-1"
+        styleClass="px-6 py-2"
         severity="info"
         class="h-full"
         [style]="{ 'margin-bottom': '23px' }"
-      ></p-button>
+      ></app-button>
     }
   </div>
 </div>
