--- a/src/app/components/shared/support-button/support-button.component.html
+++ b/src/app/components/shared/support-button/support-button.component.html
@@ -1,5 +1,5 @@
-<p-button
-  class="fixed bottom-0 left-0 rounded-border font-bold mb-8 ml-4"
+<app-button
+  styleClass="fixed bottom-0 left-0 py-5 text-2xl font-bold mb-8 ml-4"
   severity="info"
   [rounded]="true"
   icon="pi pi-phone"
@@ -16,7 +16,7 @@
     class="flex flex-c w-full content-center justify-center flex-wrap"
   >
     <div class="m-2 items-center justify-center">
-      <p-button
+      <app-button
         (click)="CallUsOnPhone.toggle($event)"
         icon="pi pi-phone"
         label="شماره های تماس"
@@ -27,7 +27,7 @@
           <label class="flex items-center justify-center"
             >انجمن رانندگان</label
           >
-          <p-button
+          <app-button
             severity="info"
             [raised]="true"
             icon="pi pi-clipboard"
@@ -41,7 +41,7 @@
           <label class="flex items-center justify-center"
             >انجمن کامیونداران</label
           >
-          <p-button
+          <app-button
             severity="info"
             [raised]="true"
             icon="pi pi-clipboard"
@@ -55,7 +55,7 @@
           <label class="flex items-center justify-center"
             >انجمن شرکت‌ها</label
           >
-          <p-button
+          <app-button
             severity="info"
             [raised]="true"
             icon="pi pi-clipboard"
@@ -69,7 +69,7 @@
     </div>
 
     <div class="m-2 items-center justify-center">
-      <p-button
+      <app-button
         (click)="showTicketDialog()"
         label="ارتباط مستقیم با پشتیبانی"
         icon="pi pi-headphones"
@@ -98,8 +98,8 @@
   </div>
 
   <div class="flex justify-end gap-2">
-    <p-button label="ارسال" (click)="submitTicket()" />
+    <app-button label="ارسال" (click)="submitTicket()" />
 
-    <p-button label="انصراف" severity="secondary" (click)="dialog = false" />
+    <app-button label="انصراف" severity="secondary" (click)="dialog = false" />
   </div>
 </p-dialog>
