--- a/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
@@ -125,12 +125,10 @@
       />
 
       <div class="flex col-span-12 px-4">
-        <app-binary-radio-input
+        <app-toggle-switch-input
           label="وضعیت زیرگروه:"
-          radioName="AnnouncementActive"
           [control]="AnnouncementActive"
           [readonly]="!isFormEditable()"
-          [disabled]="!isFormEditable()"
         />
       </div>
     </div>
