--- a/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
+++ b/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
@@ -106,11 +106,7 @@
 
       <!-- FPC Active -->
       <div class="col-span-12 md:col-span-6 flex px-2">
-        <app-binary-radio-input
-          label="وضعیت مرکز"
-          radioName="fpc-active"
-          [control]="fpcActive"
-        />
+        <app-toggle-switch-input label="وضعیت مرکز" [control]="fpcActive" />
       </div>
     </div>
   </form>
