--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -261,11 +261,11 @@
       addonWidth="7rem"
     />
 
-    <app-binary-radio-input
+    <app-toggle-switch-input
       class="col-span-12 flex px-3"
       label="وضعیت"
       [control]="Active"
-      [disabled]="true"
+      [readonly]="true"
     />
 
     <!-- Submit -->
