--- a/src/app/components/forms/travel-time-form/travel-time-form.component.html
+++ b/src/app/components/forms/travel-time-form/travel-time-form.component.html
@@ -203,7 +203,7 @@
       </div>
 
       <div class="col-span-12">
-        <app-binary-radio-input label="وضعیت" class="flex px-2" [control]="travelTimeActive" />
+        <app-toggle-switch-input label="وضعیت" class="flex px-2" [control]="travelTimeActive" />
       </div>
 
       <div class="col-span-12 flex justify-end mt-6">
