refactor(app/components/shared/layout/sidebar)[sidebar-page-group.component.html]: adjust focused item style

--- a/src/app/components/shared/layout/sidebar/sidebar-page-group/sidebar-page-group.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar-page-group/sidebar-page-group.component.html
@@ -2,7 +2,7 @@
   @for (pageGroup of pageGroupItems; track $index) {
     <div
       (click)="onClickMenuItem(pageGroup)"
-      class="w-full flex items-center gap-3 px-4 py-2 h-13 max-h-13 rounded-l-3xl cursor-pointer transition-colors duration-200 border-2"
+      class="w-full flex items-center gap-3 px-4 py-2 h-13 max-h-13 rounded-l-3xl cursor-pointer transition-colors duration-200 border-l-2 border-y-2"
       role="button"
       tabindex="0"
       [ngClass]="{
